--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div id="container">
+        <h1>Grade Adjuster</h1>
         <h2>Enter grade:</h2>
         <input type="number" min="0" max="100" id="grade">
         <button onclick="grade_ammend()">Adjust Grade</button>
