--- a/advanced.html
+++ b/advanced.html
@@ -11,11 +11,11 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-3">
+            <div class="col-xl-2 col-sm-1 col-lg-1">
             </div>
-            <div id="container" class="row col-6">
+            <div id="container" class="row col-lg-10 col-xl-8">
                 <div class="gradiv col-2">
-                    <h1>English</h1>
+                    <h1>Eng</h1>
                     <div id="holder_eng" class="row holder">
                         <div class="inpform col-12">
                             <input onchange="grade(this.id)" id="eng" type="number" min="0" max="100" value="50" class="grade">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="gradiv col-2">
-                    <h1>Option 1</h1>
+                    <h1>Opt 1</h1>
                     <div id="holder_opt1" class="row holder">
                         <div class="inpform col-12">
                             <input onchange="grade(this.id)" id="opt1" type="number" min="0" max="100" value="50" class="grade">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="gradiv col-2">
-                    <h1>Option 2</h1>
+                    <h1>Opt 2</h1>
                     <div id="holder_opt2" class="row holder">
                         <div class="inpform col-12">
                             <input onchange="grade(this.id)" id="opt2" type="number" min="0" max="100" value="50" class="grade">
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="gradiv col-2">
-                    <h1>Option 3</h1>
+                    <h1>Opt 3</h1>
                     <div id="holder_opt3" class="row holder">
                         <div class="inpform col-12">
                             <input onchange="grade(this.id)" id="opt3" type="number" min="0" max="100" value="50" class="grade">
