--- a/advanced.html
+++ b/advanced.html
@@ -14,7 +14,7 @@
             <div class="col-xl-2 col-sm-1 col-lg-1">
             </div>
             <div id="container" class="row col-lg-10 col-xl-8">
-                <div class="gradiv col-2">
+                <div class="gradiv col-md-2 col-sm-4">
                     <h1>Eng</h1>
                     <div id="holder_eng" class="row holder">
                         <div class="inpform col-12">
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="gradiv col-2">
+                <div class="gradiv col-md-2 col-sm-4">
                     <h1>Maths</h1>
                     <div id="holder_mat" class="row holder">
                         <div class="inpform col-12">
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="gradiv col-2">
+                <div class="gradiv col-md-2 col-sm-4">
                     <h1>Irish</h1>
                     <div id="holder_iri" class="row holder">
                         <div class="inpform col-12">
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="gradiv col-2">
+                <div class="gradiv col-md-2 col-sm-4">
                     <h1>Opt 1</h1>
                     <div id="holder_opt1" class="row holder">
                         <div class="inpform col-12">
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="gradiv col-2">
+                <div class="gradiv col-md-2 col-sm-4">
                     <h1>Opt 2</h1>
                     <div id="holder_opt2" class="row holder">
                         <div class="inpform col-12">
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="gradiv col-2">
+                <div class="gradiv col-md-2 col-sm-4">
                     <h1>Opt 3</h1>
                     <div id="holder_opt3" class="row holder">
                         <div class="inpform col-12">
