--- a/advanced.html
+++ b/advanced.html
@@ -11,9 +11,9 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-2 col-sm-1 col-lg-1">
+            <div class="col-xl-2 col-1 col-lg-1">
             </div>
-            <div id="container" class="row col-lg-10 col-xl-8">
+            <div id="container" class="row col-10 col-lg-10 col-xl-8">
                 <div class="gradiv col-md-2 col-sm-4">
                     <h1>Eng</h1>
                     <div id="holder_eng" class="row holder">
