--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-3">
+        <div class="col-2 col-sm-3">
         </div>
-        <div id="container" class="row col-6">
+        <div id="container" class="row col-8 col-sm-6">
           <div class="col-md-8">
             <h1>Grade Adjuster</h1>
             <h2>Enter grade:</h2>
@@ -39,7 +39,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-2 col-sm-3">
         </div>
       </div>
     </div>
