Creating new subjects

--- a/advanced.html
+++ b/advanced.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="advanced.css">
     <link rel="stylesheet" href="header/header.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
     <link rel="icon" href="https://png.pngtree.com/png-vector/20220625/ourmid/pngtree-study-icon-design-vector-png-image_5337841.png">
   </head>
   <body>
@@ -14,6 +15,9 @@
             <div class="col-xl-2 col-1 col-lg-1">
             </div>
             <div id="container" class="row col-10 col-lg-10 col-xl-8">
+                <div id="plusholder">
+                    <div id="facircle"><button id="plusbutton" onclick="newSubject()"><i class="fa-solid fa-plus"></i></button></div>
+                </div>
                 <div class="gradiv col-md-2 col-sm-4">
                     <h1>Eng</h1>
                     <div id="holder_eng" class="row holder">
