--- a/AdvancedPage/advanced.html
+++ b/AdvancedPage/advanced.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="advanced.css">
-    <link rel="stylesheet" href="header/header.css">
+    <link rel="stylesheet" href="./header/header.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
     <link rel="icon" href="https://png.pngtree.com/png-vector/20220625/ourmid/pngtree-study-icon-design-vector-png-image_5337841.png">
   </head>
@@ -150,7 +150,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="./script.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
   </body>
 </html>
