--- a/header/header.html
+++ b/header/header.html
@@ -5,6 +5,6 @@
 <div class="goleft">
   <div>
     <a class="right" href="index.html">Simple</a>
-    <a class="right" href="advanced.html">Advanced</a>
+    <!-- <a class="right" href="advanced.html">Advanced</a> -->
   </div>
 </div>
